--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -628,16 +628,11 @@
               <property name="title">
                <string>Target</string>
               </property>
-              <widget class="QComboBox" name="Reg_target_box">
-               <property name="geometry">
-                <rect>
-                 <x>10</x>
-                 <y>30</y>
-                 <width>221</width>
-                 <height>22</height>
-                </rect>
-               </property>
-              </widget>
+              <layout class="QGridLayout" name="gridLayout_84">
+               <item row="0" column="0">
+                <widget class="QComboBox" name="Reg_target_box"/>
+               </item>
+              </layout>
              </widget>
             </item>
             <item row="3" column="1">
@@ -723,16 +718,11 @@
               <property name="title">
                <string>Moving</string>
               </property>
-              <widget class="QComboBox" name="Reg_moving_box">
-               <property name="geometry">
-                <rect>
-                 <x>10</x>
-                 <y>30</y>
-                 <width>221</width>
-                 <height>22</height>
-                </rect>
-               </property>
-              </widget>
+              <layout class="QGridLayout" name="gridLayout_85">
+               <item row="0" column="0">
+                <widget class="QComboBox" name="Reg_moving_box"/>
+               </item>
+              </layout>
              </widget>
             </item>
             <item row="6" column="3">
@@ -766,16 +756,11 @@
               <property name="title">
                <string>Method</string>
               </property>
-              <widget class="QComboBox" name="Reg_method_box">
-               <property name="geometry">
-                <rect>
-                 <x>20</x>
-                 <y>30</y>
-                 <width>211</width>
-                 <height>22</height>
-                </rect>
-               </property>
-              </widget>
+              <layout class="QGridLayout" name="gridLayout_83">
+               <item row="0" column="0">
+                <widget class="QComboBox" name="Reg_method_box"/>
+               </item>
+              </layout>
              </widget>
             </item>
             <item row="0" column="3">
