--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -628,9 +628,25 @@
               <property name="title">
                <string>Target</string>
               </property>
+              <property name="alignment">
+               <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+              </property>
               <layout class="QGridLayout" name="gridLayout_84">
                <item row="0" column="0">
                 <widget class="QComboBox" name="Reg_target_box"/>
+               </item>
+               <item row="1" column="0">
+                <spacer name="verticalSpacer_28">
+                 <property name="orientation">
+                  <enum>Qt::Vertical</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>20</width>
+                   <height>40</height>
+                  </size>
+                 </property>
+                </spacer>
                </item>
               </layout>
              </widget>
@@ -718,9 +734,25 @@
               <property name="title">
                <string>Moving</string>
               </property>
+              <property name="alignment">
+               <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+              </property>
               <layout class="QGridLayout" name="gridLayout_85">
                <item row="0" column="0">
                 <widget class="QComboBox" name="Reg_moving_box"/>
+               </item>
+               <item row="1" column="0">
+                <spacer name="verticalSpacer_29">
+                 <property name="orientation">
+                  <enum>Qt::Vertical</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>20</width>
+                   <height>40</height>
+                  </size>
+                 </property>
+                </spacer>
                </item>
               </layout>
              </widget>
@@ -757,8 +789,17 @@
                <string>Method</string>
               </property>
               <layout class="QGridLayout" name="gridLayout_83">
+               <item row="1" column="0">
+                <widget class="QComboBox" name="Reg_interpolator_box"/>
+               </item>
                <item row="0" column="0">
                 <widget class="QComboBox" name="Reg_method_box"/>
+               </item>
+               <item row="2" column="0">
+                <widget class="QComboBox" name="Reg_Metric_box"/>
+               </item>
+               <item row="3" column="0">
+                <widget class="QComboBox" name="Reg_optimizer_box"/>
                </item>
               </layout>
              </widget>
@@ -8808,8 +8849,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>519</width>
-             <height>370</height>
+             <width>261</width>
+             <height>152</height>
             </rect>
            </property>
            <attribute name="label">
