--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -9098,7 +9098,14 @@ p, li { white-space: pre-wrap; }
      </widget>
     </item>
     <item row="0" column="0" colspan="2">
-     <widget class="QTreeView" name="DataTreeView"/>
+     <widget class="QTreeView" name="DataTreeView">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+        <horstretch>1</horstretch>
+        <verstretch>1</verstretch>
+       </sizepolicy>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
