--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -306,7 +306,7 @@
     <item row="0" column="1" rowspan="5" colspan="2">
      <widget class="QTabWidget" name="tabModules">
       <property name="currentIndex">
-       <number>0</number>
+       <number>4</number>
       </property>
       <widget class="QWidget" name="im_display_tab">
        <attribute name="title">
@@ -3365,7 +3365,7 @@
         <item row="0" column="0">
          <widget class="QTabWidget" name="Plan_tabs">
           <property name="currentIndex">
-           <number>0</number>
+           <number>1</number>
           </property>
           <widget class="QWidget" name="Brachy_plan_tab">
            <attribute name="title">
@@ -4927,6 +4927,19 @@
                </widget>
               </item>
              </layout>
+            </widget>
+            <widget class="QPushButton" name="pushButton_2">
+             <property name="geometry">
+              <rect>
+               <x>10</x>
+               <y>480</y>
+               <width>261</width>
+               <height>28</height>
+              </rect>
+             </property>
+             <property name="text">
+              <string>Save α/β values</string>
+             </property>
             </widget>
            </widget>
            <widget class="QGroupBox" name="eqd2_calc">
